exports[`<Cell /> renders correctly 1`] = `
<div
  className="WHVWL" />
`;

exports[`<Cell /> renders correctly with gutter 1`] = `
<div
  className="gvmVWP" />
`;

exports[`<Cell /> renders correctly with width 1`] = `
<div
  className="bEtZKN"
  width={0.5} />
`;
